# Daimon

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: noesis-sage.md
backend/services/maximus_core_service/src/maximus_core_service/consciousness/: system.py
backend/services/maximus_core_service/src/maximus_core_service/consciousness/api/: __init__.py
collectors/: __init__.py  claude_watcher.py  shell_watcher.py
docs/: ARCHITECTURE_MAP.md  PLANO_DAIMON.md  README.md  integracao-plan.md
endpoints/: __init__.py  constants.py  daimon_routes.py  quick_check.py
integrations/: __init__.py  mcp_server.py
tests/: __init__.py  test_claude_watcher.py  test_daimon_routes.py  test_mcp_server.py  test_noesis_hook.py  test_quick_check.py  test_shell_watcher.py
